[package]
name = "thalweg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
geo = "0.19.0"
json = "0.12.4"
priority-queue = "1.2.1"
rstar = "0.9.2"

[profile.release]
lto = true
panic = "abort"
